a attempt of msp

--- a/keil/.vscode/settings.json
+++ b/keil/.vscode/settings.json
@@ -2,7 +2,8 @@
     "files.associations": {
         "ti_msp_dl_config.h": "c",
         "eeprom_emulation_type_a.h": "c",
-        "oled.h": "c"
+        "oled.h": "c",
+        "i2c_communication.h": "c"
     },
     "editor.wordWrap": "on"
 }
